- Fix underline css for navigation arrow - Get images variations on client side as opening the shout directly wasn't showing the gallery - Don't show thumbs and bullets on single image - Update shrinkwrap

--- a/app/res/sass/image-gallery.scss
+++ b/app/res/sass/image-gallery.scss
@@ -24,7 +24,8 @@
         font-size: 3.4em; } }
     @media (min-width: 768px) {
       .image-gallery-content .image-gallery-left-nav:hover, .image-gallery-content .image-gallery-right-nav:hover {
-        color: #337ab7; } }
+        color: #337ab7;
+        text-decoration: none} }
   .image-gallery-content .image-gallery-left-nav {
     left: 0; }
     .image-gallery-content .image-gallery-left-nav:before {
